name:                watchdog
version:             0.1.0.0
synopsis:            PC auto-restart utility
description:         Utility for PC auto-restart. The app listens for signals
                     on given TCP port and if nothing comes for specified amount of time
                     it executes reboot-command.
homepage:            https://github.com/githubuser/watchdog#readme
license:             BSD3
license-file:        LICENSE
author:              HEX Research
maintainer:          example@example.com
copyright:           2017 HEX Research
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable watchdog
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Config
                       Reboot
                       Signal
                       TimeVar
                       Utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , concurrent-extra
                     , config-app
                     , directory
                     , interpolatedstring-perl6
                     , mtl
                     , network-simple
                     , process
                     , stm
                     , time
                     , text
                     , unbounded-delays
                     , unix
  default-language:    Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    OverloadedStrings
    QuasiQuotes
    ScopedTypeVariables
    TemplateHaskell

test-suite watchdog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , watchdog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/watchdog
